# CIOTest

./: .gitignore  README.md  setup.cfg
src/cioTest/: q1.py  q2.py  q3.py  read_ports.py  utils.py
tests/: test_read_ports.py
