[metadata]
name = cioTest
version = 0.1
author = Rokas Zemaitis
author_email = rokas.zemaitis@ed.ac.uk
description = Add short description here
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rzemaitis/CIOTest
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src